Adapt to deprecation